--- a/index.html
+++ b/index.html
@@ -17,33 +17,38 @@
 <body>
     <header>
         <div class="container">
-            <h1>Insignia Spaceventure<span class="subheading">(An intelligent afterthought)</span></h1>
-            
-        <nav>
-            <ul>
-                <li><a>About</a></li>
-                <li><a>Insights</a></li>
-                <li><a>Services</a></li>
-            </ul>
-        </nav>
-    </div>
+            <h1>Earthshine Spaceventure<span class="subheading">(An intelligent afterthought)</span></h1>
+
+            <nav>
+                <ul>
+                    <li><a>About</a></li>
+                    <li><a>Insights</a></li>
+                    <li><a>Services</a></li>
+                </ul>
+            </nav>
+
+        </div>
     </header>
 
     <main>
-        <section>
-            <div class="container">
-                <h3 class="intro-head">Kick off the fear of distance</h3>
-                <img class="main-image" src="images/mars.jpeg" alt="Star studded sky image" />
-                <h5>Join us for brief duration to explore throgh Spaceventure Launch</h5>
-                <p class="p-text">Royal Insignia Spaceventure, a private venture seeking the adventurists to indulge in
-                    the
-                    uncertainities of space. Spaceventure proposing 6 seats per flight for
-                    participants at a price that would be competitive with what other space tourism companies charge
-                    tourists.
-                </p>
+        <section class="main-section">
+            <div>
+                <h5>Explore the voyager inside you in the hidden realms of space</h3>
+                    <img class="main-image" src="images/mars.jpeg" alt="Star studded sky image" />
+                    <h5>Join us for brief duration to explore through Spaceventure Launch</h5>
+                    <p class="p-text">Royal Insignia Spaceventure, a private venture seeking the adventurists to indulge
+                        in
+                        the
+                        uncertainities of space. Spaceventure proposing 6 seats per flight for
+                        participants at a price that would be competitive with what other space tourism companies charge
+                        tourists.
+                    </p>
+            </div>
+            <div class="btn-div">
                 <a href="#" class="btn">Successful flights </a>
                 <a href="#" class="btn">Ongoing flights </a>
             </div>
+
 
 
         </section>
