final commit modified

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                 <h5>Explore the voyager inside you in the hidden realms of space</h3>
                     <img class="main-image" src="images/mars.jpeg" alt="Star studded sky image" />
                     <h5>Join us for brief duration to explore through Spaceventure Launch</h5>
-                    <p class="p-text">Royal Insignia Spaceventure, a private venture seeking the adventurists to indulge
+                    <p class="p-text">Earthshine Spaceventure, a private venture seeking the adventurists to indulge
                         in
                         the
                         uncertainities of space. Spaceventure proposing 6 seats per flight for
                         participants at a price that would be competitive with what other space tourism companies charge
-                        tourists.
+                        space tourists.
                     </p>
             </div>
             <div class="btn-div">
